# e-comm-onion-arch-django

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
deployments/nginx/: nginx.conf
e_comm_onion_arch/: api_auth.py  asgi.py  default_settings.py  models_fixtures.py  settings.py  urls.py  wsgi.py
e_comm_onion_arch/domain/common/: middlewares.py  test_middlewares.py
e_comm_onion_arch/domain/entities/: auto_name.py  common.py  test_common.py
e_comm_onion_arch/domain/repositories/: __init__.py  interface.py  metrics.py  test_base_repository.py
e_comm_onion_arch/domain/services/: __init__.py  metrics.py
orders/: containers.py  settings.py
orders/domain/entities/: orders.py  service_requests.py  value_objects.py
orders/domain/repositories/: __init__.py  orders.py  product_snapshot.py
orders/domain/services/: orders.py
orders/entrypoints/: api.py
orders/models/: __init__.py  orders.py  product_snapshot.py
orders/view/schemes/: orders.py
orders/view/v1/: __init__.py  orders.py
products/: containers.py
products/domain/entities/: product.py
products/domain/repositories/: __init__.py  product.py
products/domain/services/: products.py
