[project]
name = "e-comm-onion-arch-django"
version = "0.1.0"
description = ""
authors = ["gitrus <gitrus@yandex.com>"]
license = "MIT"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django>=5.1.7",
    "django-prometheus>=2.3.1",
    "dependency-injector>=4.43.0",
]


[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-django>=4.10.0",
]

lint = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]


[tool.black]
line-length = 98
target-version = ['py313']

[tool.ruff]
line-length = 98
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["S", "I", "E4", "E7", "E9", "F", "C"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
